Fix weird spacing around bold text

--- a/game/src/game/end-screen.scss
+++ b/game/src/game/end-screen.scss
@@ -34,8 +34,8 @@
 
     .Continue {
         b {
-            margin-left: 5px;
-            margin-left: 5px;
+            margin-left: 2px;
+            margin-right: 2px;
         }
 
         &.hide {
